# besthea

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  experiments_parallel_fmm.md
cpp/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile.default  README.md
cpp/cmake/: macros.cmake
cpp/doc/: Doxyfile
cpp/legacy/: Makefile.default
cpp/src/: align.cpp  basis_tri_p0.cpp  basis_tri_p1.cpp  block_linear_operator.cpp  block_lower_triangular_toeplitz_matrix.cpp  block_mkl_cg_inverse.cpp  block_mkl_fgmres_inverse.cpp  block_row_matrix.cpp  block_vector.cpp  cluster_tree.cpp  compound_block_linear_operator.cpp  coordinates.cpp  distributed_fast_spacetime_be_assembler.cpp  distributed_fast_spacetime_be_space.cpp  distributed_pFMM_matrix.cpp  distributed_spacetime_cluster_tree.cpp  distributed_spacetime_tensor_mesh.cpp  fast_spacetime_be_assembler.cpp  fast_spacetime_be_space.cpp  fe_identity.cpp  full_matrix.cpp  indices.cpp  io_routines.cpp  linear_operator.cpp  local_vector_routines.cpp  mkl_cg_inverse.cpp  mkl_fgmres_inverse.cpp  pFMM_matrix.cpp  parallel_fmm.cpp  quadrature.cpp  space_cluster_tree.cpp  spacetime_be_identity.cpp  spacetime_be_space.cpp  spacetime_cluster_tree.cpp  spacetime_mesh_generator.cpp  spacetime_tensor_mesh.cpp  spacetime_tp_mesh.cpp  sparse_matrix.cpp  temporal_mesh.cpp  tetrahedral_spacetime_mesh.cpp  (+14 more)
cpp/test/: Makefile.default  Makefile.linux  test_2.cpp
examples/: CMakeLists.txt  experiments_parallel_fmm.md  experiments_time_adaptive_fmm.md
examples/dirichlet/: CMakeLists.txt  dirichlet.cpp
examples/dirichlet_onthefly_cpu/: CMakeLists.txt  dirichlet_onthefly_cpu.cpp
examples/dirichlet_onthefly_gpu/: CMakeLists.txt
examples/distributed_tensor_dirichlet/: CMakeLists.txt  experiments_parallel_fmm.md  plot_tasks.m  run.cpp
examples/experiment_matrix_solve/: CMakeLists.txt  experiment_matrix_solve.cpp
examples/experiment_matrix_vector_product/: CMakeLists.txt  experiment_matrix_vector_product.cpp
examples/fast_dirichlet_ibvp/: CMakeLists.txt  run.cpp
examples/fast_initial_dirichlet_bvp/: CMakeLists.txt  run.cpp
examples/gpu_onthefly/: CMakeLists.txt  README.md  multiply.cpp  run_components.sh  run_convergence.sh  run_gpu_algorithm.sh  run_multigpu.sh  run_multiply.sh  run_onthefly_comparison_mult.sh  run_onthefly_comparison_solve.sh  run_onthefly_convergence.sh  run_solve.sh  solve.cpp
examples/mesh_files/: cube_12_half_scale.txt  cube_12_vol_half_scale.txt  cube_24.txt  grid_cube_xy.txt  grid_xy.txt  nuniform.txt  scaled_crankshaft_11k.txt  time_1_10.txt  time_adaptive_mesh_exp_decay.txt  time_adaptive_mesh_rapidly_changing_boundary_data.txt
examples/neumann_onthefly_cpu/: CMakeLists.txt
examples/neumann_onthefly_gpu/: CMakeLists.txt  neumann_onthefly_gpu.cpp
examples/onthefly_cpu_dirichlet/: CMakeLists.txt  run.cpp
examples/onthefly_experiments/: CMakeLists.txt  multiply.cpp  run_onthefly_comparison.sh  run_onthefly_comparison_mult.sh  run_onthefly_components.sh  run_onthefly_multigpu.sh  solve.cpp
examples/solve_ibvp_rapidly_changing_data/: CMakeLists.txt  run.cpp
examples/testing/: CMakeLists.txt  run.cpp
examples/uniform_tensor_dirichlet/: CMakeLists.txt  run.cpp
examples/uniform_tensor_dirichlet_onthefly_cpu/: CMakeLists.txt
examples/uniform_tensor_dirichlet_onthefly_gpu/: CMakeLists.txt  run.cpp
examples/uniform_tensor_neumann/: CMakeLists.txt  run.cpp
examples/uniform_tensor_neumann_onthefly_cpu/: CMakeLists.txt  run.cpp
examples/uniform_tensor_neumann_onthefly_gpu/: CMakeLists.txt  run.cpp
experiments/: CMakeLists.txt
experiments/_scripts/: blockVectorPerm.sh  blockVectorPermCpu.sh  blockVectorPerm_gpuExtract.sh
experiments/alias_in_struct/: main.cpp
experiments/block_vector_add_raw/: CMakeLists.txt  block_vector_add_raw.cpp
experiments/block_vector_permute/: CMakeLists.txt  block_vector_permute.cpp
experiments/constexpr_struct/: main.cu
experiments/cuda_constant_memory/: CMakeLists.txt  main.cu
experiments/cuda_external_constexpr/: main.cu  somefile.h
experiments/cuda_nvcc_warnings/: main.cu
experiments/cuda_properties/: CMakeLists.txt  main.cpp
experiments/cuda_reduction_block/: main.cu
experiments/cuda_reduction_warp/: main.cu
experiments/cuda_shared_memory/: main.cu
experiments/cuda_test/: daxpy.cu  daxpy.h  main.cpp
experiments/default_arguments/: main.cpp
experiments/matrix_dim_print/: CMakeLists.txt  matrix_dim_print.cpp
experiments/matrix_equal/: CMakeLists.txt  matrix_equal.cpp
experiments/matrix_print/: matrix_print.cpp
experiments/matrix_solve/: CMakeLists.txt  matrix_solve.cpp
experiments/matrix_vector_product/: CMakeLists.txt  matrix_vector_product.cpp
experiments/mwe_dirichlet/: mwe_dirichlet.cpp
experiments/parallel_copy/: main.cpp
experiments/static_arrays/: main.cpp
experiments/templates01/: main.cpp
experiments/templates02/: Storage.cpp  Storage.h  main.cpp
experiments/templates03/: main.cpp
experiments/templates04/: file1.cpp  file2.cpp  header.h  main.cpp
experiments/templates05/: main.cpp
experiments/templates06/: main.cu
experiments/templates07/: main.cpp
experiments/templates08/: main.cpp
experiments/templates09/: main.cpp
experiments/templates10/: main.cpp
experiments/templates11/: main.cpp
experiments/templates12/: main.cpp  neco.cpp  neco.h
test/: CMakeLists.txt
test/catch/: CMakeLists.txt  catch_mpi_main.cpp  catch_test_pFMM.cpp
test/determine_spacetime_configuration/: CMakeLists.txt  run.cpp
test/dirichlet_indirect/: run.cpp
test/fast_tensor_dirichlet/: run.cpp
test/fast_tensor_neumann/: run.cpp
test/mesh_files/: cube_12.txt  cube_24_half_scale.txt  icosahedron.txt  time_nuniform.txt
test/parallel_dirichlet_indirect/: run.cpp
test/parallel_fast_tensor_dirichlet/: run.cpp
test/routines/: run.cpp
test/spacetime_test/: CMakeLists.txt  run.cpp
test/test_4d_mesh/: run.cpp
test/test_double_layer_operator/: CMakeLists.txt  run.cpp
test/test_ensight_export/: CMakeLists.txt  test_ensight_export.cpp
test/test_hypersingular_operator/: run.cpp
(+1204 files in other folders)
