
include_directories(${besthea_INCLUDE_DIRS})
link_libraries(besthea)

add_executable(alias_in_struct alias_in_struct/main.cpp)
add_executable(block_vector_add_raw block_vector_add_raw/block_vector_add_raw.cpp)
add_executable(block_vector_permute block_vector_permute/block_vector_permute.cpp)
add_executable(default_arguments default_arguments/main.cpp)
add_executable(matrix_dim_print matrix_dim_print/matrix_dim_print.cpp)
add_executable(matrix_print matrix_print/matrix_print.cpp)
add_executable(parallel_copy parallel_copy/main.cpp)
add_executable(static_arrays static_arrays/main.cpp)
add_executable(templates01 templates01/main.cpp)
add_executable(templates02 templates02/main.cpp templates02/Storage.cpp)
add_executable(templates03 templates03/main.cpp)
add_executable(templates04 templates04/main.cpp templates04/file1.cpp templates04/file2.cpp)
add_executable(templates05 templates05/main.cpp)
add_executable(templates07 templates07/main.cpp)
add_executable(templates08 templates08/main.cpp)
add_executable(templates09 templates09/main.cpp)
add_executable(templates10 templates10/main.cpp)
add_executable(templates11 templates11/main.cpp)
add_executable(templates12 templates12/main.cpp templates12/neco.cpp)

if(USE_CUDA)
  add_executable(constexpr_struct constexpr_struct/main.cu)
  add_executable(cuda_constant_memory cuda_constant_memory/main.cu)
  add_executable(cuda_external_constexpr cuda_external_constexpr/main.cu)
  add_executable(cuda_nvcc_warnings cuda_nvcc_warnings/main.cu)
  add_executable(cuda_properties cuda_properties/main.cpp)
  add_executable(cuda_reduction_warp cuda_reduction_warp/main.cu)
  add_executable(cuda_shared_memory cuda_shared_memory/main.cu)
  add_executable(cuda_test cuda_test/main.cpp cuda_test/daxpy.cu)
  add_executable(matrix_solve matrix_solve/matrix_solve.cpp)
  add_executable(matrix_vector_product matrix_vector_product/matrix_vector_product.cpp)
  add_executable(templates06 templates06/main.cu)
endif()

