add_subdirectory(catch)
add_subdirectory(determine_spacetime_configuration)
add_subdirectory(dirichlet_indirect)
add_subdirectory(fast_tensor_dirichlet)
add_subdirectory(fast_tensor_neumann)
add_subdirectory(parallel_dirichlet_indirect)
add_subdirectory(parallel_fast_tensor_dirichlet)
add_subdirectory(routines)
add_subdirectory(spacetime_test)
add_subdirectory(test_4d_mesh)
add_subdirectory(test_double_layer_operator)
add_subdirectory(test_ensight_export)
add_subdirectory(test_hypersingular_operator)
add_subdirectory(test_mesh_generator)
add_subdirectory(test_parallel_double_layer_operator)
add_subdirectory(test_parallel_scalability)
add_subdirectory(uniform_tensor_dirichlet)
add_subdirectory(uniform_tensor_neumann)