add_subdirectory(catch)
add_subdirectory(dirichlet_indirect)
add_subdirectory(fast_tensor_dirichlet)
add_subdirectory(fast_tensor_neumann)
add_subdirectory(parallel_dirichlet_indirect)
add_subdirectory(parallel_fast_tensor_dirichlet)
add_subdirectory(test_4d_mesh)
add_subdirectory(test_ensight_export)
add_subdirectory(uniform_tensor_dirichlet)
add_subdirectory(uniform_tensor_neumann)