add_executable(uniform_tensor_dirichlet run.cpp)
target_link_libraries(uniform_tensor_dirichlet PUBLIC besthea)
if (CMAKE_SYSTEM_NAME MATCHES Linux AND CMAKE_CXX_COMPILER_ID MATCHES GNU)
  target_link_libraries(uniform_tensor_dirichlet PUBLIC -Wl,--no-as-needed)
endif (CMAKE_SYSTEM_NAME MATCHES Linux  AND CMAKE_CXX_COMPILER_ID MATCHES GNU)
target_link_libraries(uniform_tensor_dirichlet PUBLIC mkl_core mkl_intel_thread mkl_intel_ilp64 iomp5 ${MPI_CXX_LIBRARIES})
