add_executable(uniform_tensor_neumann run.cpp)
target_link_libraries(uniform_tensor_neumann PUBLIC besthea)
if (CMAKE_SYSTEM_NAME MATCHES Linux AND CMAKE_CXX_COMPILER_ID MATCHES GNU)
  target_link_libraries(uniform_tensor_neumann PUBLIC -Wl,--no-as-needed)
endif (CMAKE_SYSTEM_NAME MATCHES Linux AND CMAKE_CXX_COMPILER_ID MATCHES GNU)
target_link_libraries(uniform_tensor_neumann PUBLIC ${MKL_LIBRARIES} ${MPI_CXX_LIBRARIES})
